Safari - fix JS, Masthead button alignment

--- a/app/assets/stylesheets/widgets/_ad_landing_page/homepage_masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/homepage_masthead.scss
@@ -205,6 +205,15 @@
         transition: 300ms ease all;
         min-height: 54px;
 
+        @media not all and (min-resolution:.001dpcm) {
+          @supports (-webkit-appearance:none) {
+
+            display: flex;
+            align-items: center;
+
+          }
+        }
+
         &:hover,
         &:focus,
         &:focus-within {
